--- a/less/forms.less
+++ b/less/forms.less
@@ -198,6 +198,7 @@ form button.delete:hover {
 }
 
 .uploadButton {
+	margin-top: 0;
 	padding: .2em .6em;
 	position: relative;
 	overflow: hidden;
